[feat] - Fixes a bunch of validations
