# router/routes.go
@@ -1,9 +1,9 @@
 package router
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/venkatvghub/k8s-ns/controllers"
 	"github.com/venkatvghub/k8s-ns/middlewares"
 	"k8s.io/client-go/kubernetes"
@@ -18,11 +18,17 @@ func InitializeRoutes(clientset *kubernetes.Clientset) *gin.Engine {
 	{
 		v1.GET("/namespaces", controllers.GetNS)
 		v1.GET("/namespaces/:namespace/deployments", controllers.GetDeployments)
-		v1.POST("/namespaces/:sourceNamespace/clone", controllers.CloneNamespace)
+		v1.GET("/namespaces/:namespace/deployments/display", controllers.DisplayDeployments)
+		v1.GET("/namespaces/:namespace/secrets/display", controllers.DisplaySecrets)
+		v1.GET("/namespaces/:namespace/configmaps/display", controllers.DisplayConfigMap)
+
+		v1.POST("/cloneNamespace", controllers.CloneNamespace)
+		v1.POST("/updateDeploymentImage", controllers.UpdateDeploymentImage)
+		v1.POST("/updateSecret", controllers.UpdateSecret)
+		v1.POST("/updateConfigMap", controllers.UpdateConfigMap)
+
 	}
 	// use ginSwagger middleware to serve the API docs
-	r.GET("/swagger/*any", func(c *gin.Context) {
-		http.StripPrefix("/swagger/", http.FileServer(http.Dir("docs"))).ServeHTTP(c.Writer, c.Request)
-	})
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	return r
 }
